Fixed some layout issues and added back images for all blog posts

--- a/assets/themes/kho/css/screen.css
+++ b/assets/themes/kho/css/screen.css
@@ -241,6 +241,7 @@ ul.posts {
 #workview #project {
 	display: block;
 	margin-left: 20px;
+	width: 800px;
 }
 #project .entity {
 	border: 0;
